# tgbot

./: .gitignore  README.md  pyproject.toml
src/tgbot_mcp/: __init__.py  __main__.py  authorize.py  cli.py  config.py  server.py  telegram_client.py  telegram_service.py  tools.py
